add some styles to nav

--- a/src/global.css
+++ b/src/global.css
@@ -37,10 +37,32 @@ a {
 }
 
 .sidebar {
-  display: flex;
+  display: flex;  
   flex-direction: column;
   padding: 1.5rem 1.25rem; 
   gap: 2rem;
+}
+
+.sidebar .logo {
+  width: 2rem;
+  height: 2rem;
+}
+
+.sidebar .new-tweet{
+  background: var(--twitter-blue);
+  border-radius: 99px;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  color: #ffff;
+  font-size: 1.25rem;
+  font-weight: 900;
+  border: 0;
+}
+
+.sidebar .new-tweet:hover {
+  filter: brightness(0.9)
 }
 
 .content {
