add some style for new tweet content

--- a/src/global.css
+++ b/src/global.css
@@ -13,7 +13,7 @@ body, input, textarea, button {
 }
 
 body {
-  background: #0F1419;  
+  background: #000000;  
   color: #e1e1e6;
   -webkit-font-smoothing: antialiased;
 }
@@ -43,6 +43,36 @@ a {
   gap: 2rem;
 }
 
+.main-navigation {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.main-navigation a {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+  font-size: 1.25rem;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.main-navigation a.active {
+  color: var(--twitter-blue)
+}
+
+.main-navigation a:hover {
+  background-color: #181818;
+  border-radius: 99px;
+}
+
+.main-navigation a svg{
+  width: 2rem;
+  height: 2rem;
+}
+
+
 .sidebar .logo {
   width: 2rem;
   height: 2rem;
@@ -69,3 +99,85 @@ a {
   border-left: 1px solid #ebebf0;
   border-right: 1px solid #ebebf0;
 }
+
+.timeline-header {
+  padding: 1.5rem 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.25rem;
+  font-weight: 700;
+  border-bottom: 1px solid #ebebf0;
+}
+
+.timeline-header svg {
+  width: 1.5rem;
+  height: 1.5rem;
+  color: var(--twitter-blue)
+}
+
+.new-tweet-form {
+  padding: 1.5rem 1.25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.new-tweet-form label {
+  display: flex;
+  gap: 0.75rem;
+}
+
+.new-tweet-form label img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 9999px;
+}
+
+.new-tweet-form label textarea {
+  flex: 1;
+  background: none;
+  border: 0;
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin-top: 0.75rem;
+  color: #e7e9d6;
+  border: 0;
+  resize: none;
+}
+
+.new-tweet-form label textarea:focus{
+  border: none;
+  overflow: auto;
+  outline: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
+.new-tweet-form label textarea::placeholder {
+  color: #5b7083
+}
+
+.new-tweet-form button[type=submit]{
+  margin-left: auto;
+  background: var(--twitter-blue);
+  border-radius: 99px;
+  padding: 0.75rem 1.5rem;
+  color: #ffff;
+  font-size: 1rem;
+  font-weight: 900;
+  border: 0;
+}
+
+.new-tweet-form button[type=submit]:hover{
+  filter: brightness(0.9)
+}
+
+.separator {
+  background: #2f3336;
+  border-top: 1px solid #ebeef0;
+  border-bottom: 1px solid #ebeef0;
+  height: 0.75rem;
+}
+
