--- a/src/global.css
+++ b/src/global.css
@@ -5,7 +5,9 @@
 }
 
 :root {
-  --twitter-blue: #1da1f2
+  --twitter-blue: #1da1f2;
+  --border-color: #2c2b2b;
+  --bg-color: #181818;
 }
 
 body, input, textarea, button {
@@ -35,85 +37,9 @@ a {
   display: grid;
   grid-template-columns: 300px 1fr;
 }
-
-.sidebar {
-  display: flex;  
-  flex-direction: column;
-  padding: 1.5rem 1.25rem; 
-  gap: 2rem;
-}
-
-.main-navigation {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-.main-navigation a {
-  display: flex;
-  align-items: center;
-  gap: 1.25rem;
-  font-size: 1.25rem;
-  font-weight: 700;
-  text-decoration: none;
-}
-
-.main-navigation a.active {
-  color: var(--twitter-blue)
-}
-
-.main-navigation a:hover {
-  background-color: #181818;
-  border-radius: 99px;
-}
-
-.main-navigation a svg{
-  width: 2rem;
-  height: 2rem;
-}
-
-
-.sidebar .logo {
-  width: 2rem;
-  height: 2rem;
-}
-
-.sidebar .new-tweet{
-  background: var(--twitter-blue);
-  border-radius: 99px;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  color: #ffff;
-  font-size: 1.25rem;
-  font-weight: 900;
-  border: 0;
-}
-
-.sidebar .new-tweet:hover {
-  filter: brightness(0.9)
-}
-
 .content {
-  border-left: 1px solid #ebebf0;
-  border-right: 1px solid #ebebf0;
-}
-
-.timeline-header {
-  padding: 1.5rem 1.25rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 1.25rem;
-  font-weight: 700;
-  border-bottom: 1px solid #ebebf0;
-}
-
-.timeline-header svg {
-  width: 1.5rem;
-  height: 1.5rem;
-  color: var(--twitter-blue)
+  border-left: 1px solid  var(--border-color);
+  border-right: 1px solid var(--border-color);
 }
 
 .new-tweet-form {
@@ -141,7 +67,7 @@ a {
   font-size: 1.25rem;
   font-weight: 500;
   margin-top: 0.75rem;
-  color: #e7e9d6;
+  color: #e1e1e6;
   border: 0;
   resize: none;
 }
@@ -174,10 +100,5 @@ a {
   filter: brightness(0.9)
 }
 
-.separator {
-  background: #2f3336;
-  border-top: 1px solid #ebeef0;
-  border-bottom: 1px solid #ebeef0;
-  height: 0.75rem;
-}
+
 
